syntax = "proto3";
package monitor.proto;

message QueryMessage
{
    string sql = 1;
}

message QueryData
{
    int32 gpu_num = 1;
    string gpu_name = 2;
    int32 gpu_used_mem = 3;
    int32 gpu_total_mem = 4;
    int32 gpu_avg_util = 5;
    float cpu_load_avg_1 = 6;
    float cpu_load_avg_3 = 7;
    float cpu_load_avg_15 = 8;
    float mem_used = 9;
    float mem_total = 10;
    float net_send_rate = 11;
    float net_rcv_rate = 12;
    string timehms = 13;
}

message QueryResults
{
    repeated QueryData query_data = 1;
}